maep (1.0.2) unstable; urgency=low

  * Fixed GPS disable on diablo/chinook

 -- Till Harbaum <till@harbaum.org>  Thu, 24 Dec 2009 20:38:43 +0100

maep (1.0.1) unstable; urgency=low

  * Keep map centered on configure, no need for app to catch event anymore
  * Added Public Transport map from öpnvkarte.de
	
 -- Till Harbaum <till@harbaum.org>  Fri, 11 Dec 2009 11:05:37 +0100

maep (1.0) unstable; urgency=low

  * Initial release based on gpxview 0.9.0

 -- Till Harbaum <till@harbaum.org>  Mon, 07 Dec 2009 18:25:10 +0100