@@ -1,7 +1,8 @@
 maep (1.0.2) unstable; urgency=low
 
   * Fixed GPS disable on diablo/chinook
-
+  * Optimized map center handling
+	
  -- Till Harbaum <till@harbaum.org>  Thu, 24 Dec 2009 20:38:43 +0100
 
 maep (1.0.1) unstable; urgency=low
